--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "d3": "^5.16.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
-    "jsdom": "^16.2.2"
+    "html-pdf": "^2.2.0",
+    "jsdom": "^16.2.2",
+    "phantom": "^6.3.0"
   },
   "repository": {
     "type": "git",
